<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/languageRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang_english" />

        <RadioButton
            android:id="@+id/radioSlovak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang_slovak" />

        <RadioButton
            android:id="@+id/radioUkrainian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang_ukrainian" />
    </RadioGroup>
</LinearLayout>
